--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,18 @@
 		<artifactId>mongo-java-driver</artifactId>
 		<version>2.10.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20160212</version>
+	</dependency>
+	
+    <dependency>
+        <groupId>org.elasticsearch</groupId>
+        <artifactId>elasticsearch</artifactId>
+        <version>2.3.4</version>
+    </dependency>
   </dependencies>
 
 </project>
